Revised code to meet assignment 10 instructions
